--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url= jdbc:postgresql://0.0.0.0:5432/defasio_database
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
