Criando a inteface Pessoa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://0.0.0.0:5432/defasio_database
+spring.datasource.url= jdbc:postgresql://0.0.0.0:5432/desafio_database
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.hibernate.ddl-auto=update
